Chuyển đổi các lưu trữ và function save cho shopping cart